fix color bleed on mobile

--- a/frontend/static/css/consolidated.css
+++ b/frontend/static/css/consolidated.css
@@ -101,7 +101,7 @@
 
 /*basic page setup */
 html {
-  background-color: blue !important;
+  background-color: #050810 !important;
   min-height: 100vh;
   overscroll-behavior: none;
 }
